--- a/fundooApp/templates/archive.html
+++ b/fundooApp/templates/archive.html
@@ -2,11 +2,11 @@
 <div ng-init="getAllNote()">
  <div layout="row"  layout-wrap layout-fill style="padding-bottom: 32px;padding-left: 310px;">
 
-<md-card  class="mycard" ng-repeat="x in notes | filter:{pin:false,archive:true,trash:false}" style="height: 160px;background-color:{{x.color}};width:30%;" >
+<md-card  class="mycard" ng-repeat="note in notes | filter:{pin:false,archive:true,trash:false}" style="height: 160px;background-color:{{x.color}};width:30%;" >
   <md-card-title ng-click="showAdvanced($event,note)">
-      <div class="intial-text" contenteditable>{{x.title}}</div>
+      <div class="intial-text" contenteditable>{{note.title}}</div>
          </md-card-title>
-        <md-button ng-click="updatePin(x)" class="md-icon-button" style="margin:-32px 0px 3px 246px;"  >
+        <md-button ng-click="updatePin(note)" class="md-icon-button" style="margin:-32px 0px 3px 246px;"  >
          <img src="images/pin0.svg" style="width: 18px;margin-top:-18px;"  />
             <md-tooltip>pin note</md-tooltip>
   </md-button>
@@ -14,7 +14,7 @@
   <div style=" font-family: Arial, Helvetica, sans-serif; word-wrap:break-word;font-weight: bold;font-size: 30px;">
   </div>
         <md-card-content class="center" ng-click="showAdvanced($event,note)">
-             <div class="initial-text" contentediable>{{x.description}}</div>
+             <div class="initial-text" contentediable>{{note.description}}</div>
          </md-card-content>
          <icon></icon>
          </div>
