--- a/fundooApp/templates/popupnote.html
+++ b/fundooApp/templates/popupnote.html
@@ -1,13 +1,17 @@
-<md-dialog style="height:200px; width:600px;">
+<md-dialog  style="height: 175px;width:600px;">
 <div ng-init="getAllNotes()">
   <div layout="row">
-    <div contenteditable ng-model="mydata.title" style="width:400px;margin-top: 10px">  </div>
-    <md-icon><img src="images/pin0.svg" style="padding-left: 32px;padding-top: 9px; "/>
+    <div contenteditable ng-model="mydata.title"><strong ng-bind-html="mydata.title"></strong> </div>
+    <md-icon><img src="images/pin0.svg" style="margin-left: 229px;
+    margin-top: 6px;"/ >
     </md-icon>
   </div>
+    <div contenteditable ng-model="mydata.description" ng-bind-html="description">
+    </div>
+  </div>
+<div style="margin-top:14px;">  <icon></icon></div>
+       <md-button ng-click="showWhenClicked=false;noteModel();updateNoteTitleDescripn(mydata);" style="color:black; border-radius:05px;margin-left:484px;
+    margin-top: -37px;
+    width:10px;">CLOSE</md-button>
 
-    <div contenteditable ng-model="mydata.description" convert-new-lines="true"style="width:400px;height:50px;"></div>
-  <icon></icon>
-       <md-button ng-click="showWhenClicked=false;noteModel();updateNoteTitleDescripn(mydata);" style="color:black; border-radius:05px;margin:95px 494px 0px 490px;">CLOSE</md-button>
-</div>
 </md-dialog>
